@@ -1,3 +1,0 @@
-#!/bin/sh
-
-exec mknod /dev/rpl c 228 0;
