@@ -1,0 +1,3 @@
+/i386
+/machine
+/x86
