@@ -1,0 +1,3 @@
+#!/bin/sh
+
+exec /sbin/mknod /dev/rpl c 228 0;
