@@ -1,0 +1,3 @@
+#!/bin/sh
+
+exec /sbin/modload rpldev_mod.o;
