@@ -1,13 +1,13 @@
 ---
- kern/tty.c   |   44 ++++++++++++++++++++++++++++++++++++++++++++
+ kern/tty.c   |   40 ++++++++++++++++++++++++++++++++++++++++
  sys/rpldhk.h |   17 +++++++++++++++++
- 2 files changed, 61 insertions(+)
+ 2 files changed, 57 insertions(+)
 
 Index: sys/kern/tty.c
 ===================================================================
 --- sys.orig/kern/tty.c
 +++ sys/kern/tty.c
-@@ -65,6 +65,13 @@ __KERNEL_RCSID(0, "$NetBSD: tty.c,v 1.18
+@@ -92,6 +92,13 @@ __KERNEL_RCSID(0, "$NetBSD: tty.c,v 1.22
  
  #include <machine/stdarg.h>
  
@@ -21,7 +21,7 @@ Index: sys/kern/tty.c
  static int	ttnread(struct tty *);
  static void	ttyblock(struct tty *);
  static void	ttyecho(int, struct tty *);
-@@ -217,6 +224,39 @@ SYSCTL_SETUP(sysctl_kern_tkstat_setup, "
+@@ -245,6 +252,35 @@ SYSCTL_SETUP(sysctl_kern_tkstat_setup, "
  		       CTL_KERN, KERN_TKSTAT, KERN_TKSTAT_RAWCC, CTL_EOL);
  }
  
@@ -30,7 +30,6 @@ Index: sys/kern/tty.c
 +	typeof(rpl_open) tmp = rpl_open;
 +	if (tmp != NULL)
 +		tmp(tty);
-+	return;
 +}
 +
 +static inline void rpldhk_read1(char c, const struct tty *tty)
@@ -38,7 +37,6 @@ Index: sys/kern/tty.c
 +	typeof(rpl_read) tmp = rpl_read;
 +	if (tmp != NULL)
 +		tmp(&c, 1, tty);
-+	return;
 +}
 +
 +static inline void rpldhk_write(const char *buf, size_t size,
@@ -47,7 +45,6 @@ Index: sys/kern/tty.c
 +	typeof(rpl_write) tmp = rpl_write;
 +	if (tmp != NULL)
 +		tmp(buf, size, tty);
-+	return;
 +}
 +
 +static inline void rpldhk_lclose(const struct tty *tty)
@@ -55,29 +52,28 @@ Index: sys/kern/tty.c
 +	typeof(rpl_lclose) tmp = rpl_lclose;
 +	if (tmp != NULL)
 +		tmp(tty);
-+	return;
 +}
 +
  int
  ttyopen(struct tty *tp, int dialout, int nonblock)
  {
-@@ -292,6 +332,7 @@ ttylopen(dev_t device, struct tty *tp)
+@@ -314,6 +350,7 @@ ttylopen(dev_t device, struct tty *tp)
+ #endif
  	}
- 	TTY_UNLOCK(tp);
- 	splx(s);
+ 	mutex_spin_exit(&tty_lock);
 +	rpldhk_open(tp);
  	return (0);
  }
  
-@@ -314,6 +355,7 @@ ttyclose(struct tty *tp)
+@@ -335,6 +372,7 @@ ttyclose(struct tty *tp)
  
  	ttyflush(tp, FREAD | FWRITE);
  
 +	rpldhk_lclose(tp);
  	tp->t_gen++;
  	tp->t_pgrp = NULL;
- 	if (tp->t_session != NULL) {
-@@ -1830,6 +1872,7 @@ ttread(struct tty *tp, struct uio *uio, 
+ 	tp->t_state = 0;
+@@ -1832,6 +1870,7 @@ ttread(struct tty *tp, struct uio *uio,
   		error = ureadc(c, uio);
  		if (error)
  			break;
@@ -85,7 +81,7 @@ Index: sys/kern/tty.c
   		if (uio->uio_resid == 0)
  			break;
  		/*
-@@ -1996,6 +2039,7 @@ ttwrite(struct tty *tp, struct uio *uio,
+@@ -1991,6 +2030,7 @@ ttwrite(struct tty *tp, struct uio *uio,
  				cc = 0;
  				goto out;
  			}
